# moss-llm-service

./: README.md
core/: CMakeLists.txt  Makefile  __init__.py
core/include/models/: factoryllm.h
core/src/: pybinding.cpp
